--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
     "protractor": "^5.4.1",
     "jasmine": "^3.3.0",
     "jasmine-data-provider": "^2.2.0",
-    "protractor-jasmine2-html-reporter": "^0.0.7"
+    "protractor-jasmine2-html-reporter": "^0.0.7",
+    "protractor-beautiful-reporter": "^1.2.7"
   },
   "scripts": {
-    "webdriver-update":"./node_modules/.bin/webdriver-manager update",
-    "webdriver-start":"./node_modules/.bin/webdriver-manager start",
-    "protractor":"./node_modules/.bin/protractor conf.js",
+    "webdriver-update": "./node_modules/.bin/webdriver-manager update",
+    "webdriver-start": "./node_modules/.bin/webdriver-manager start",
+    "protractor": "./node_modules/.bin/protractor conf.js",
     "start": "webdriver-update &&webdriver-start && protractor",
-    "runsmoke":"./node_modules/.bin/protractor conf.js --suite smoke",
-    "runregression":"./node_modules/.bin/protractor conf.js --suite regression"
+    "runsmoke": "./node_modules/.bin/protractor conf.js --suite smoke",
+    "runregression": "./node_modules/.bin/protractor conf.js --suite regression"
   },
   "author": "Gowthamreddy",
   "license": "ISC"
